dodaj kuchni polsk

--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
     <main>
         <!-- cześć, zapraszam do edycji -->
     </main>
+    <section class="placeholder">
+        <h1>KUCHNIA POLSKA</h1>
+        <p>opis (aby było do czego się przyczepić)</p>
+    </section>
 </body>
 </html>
