--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </main>
     <section class="placeholder">
         <h1>KUCHNIA POLSKA</h1>
-        <p>opis (aby było do czego się przyczepić)</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque tincidunt rhoncus pharetra. Nam sit amet tellus diam. Morbi utm</p>
     </section>
 </body>
 </html>
